# GameOfLife

./: .gitignore  CMakeLists.txt  GameOfLife  README  compile.sh  pulsar.rle
cells/: glider.rle  gosperglidegun.rle  linepuffer.rle
include/: GameOfLife.h  GameOfLife.hpp
src/: GameOfLife.cpp  ImportCell.cpp  main.cpp
